---
source: cli/tests/cli_snapshot_tests.rs
expression: stdout
---
Commit model weights (step 2 of create-commit-reveal)

Works on both Created models (initial) and Active models (update). Commitments are auto-computed from the weights file and embedding. Must be revealed in the next epoch.

Usage: soma model commit [OPTIONS] --weights-file <WEIGHTS_FILE> --weights-url <WEIGHTS_URL> --embedding <EMBEDDING> --decryption-key <DECRYPTION_KEY> <MODEL_ID>

Arguments:
  <MODEL_ID>
          Model ID to commit weights for

Options:
      --weights-file <WEIGHTS_FILE>
          Path to the encrypted weights file

      --weights-url <WEIGHTS_URL>
          URL where the encrypted weights are (or will be) hosted

      --embedding <EMBEDDING>
          Model embedding vector as comma-separated floats (e.g., "0.1,0.2,0.3,...")

      --decryption-key <DECRYPTION_KEY>
          Base58-encoded AES-256 decryption key (32 bytes) — commitment is auto-computed

      --tx-digest
          Compute the transaction digest and print it out, but do not execute

      --simulate
          Perform a dry run (simulation) of the transaction, without executing it

      --serialize-unsigned-transaction
          Serialize the unsigned transaction data (base64) instead of executing. Use with `soma tx execute-signed --tx-bytes <TX_BYTES>`

      --serialize-signed-transaction
          Serialize the signed transaction data (base64) instead of executing. Use with `soma tx execute-combined-signed --signed-tx-bytes <SIGNED_TX_BYTES>`

      --json
          Output as JSON

  -h, --help
          Print help (see a summary with '-h')

EXAMPLES:
    soma model commit 0xMODEL_ID \
        --weights-url https://storage.example.com/weights.bin \
        --weights-file ./model.bin --embedding 0.1,0.2,0.3
